docs: add the v1.4.0-rc.2 CHANGELOG entry
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/CHANGELOG/1.4-CHANGELOG.md
+++ b/CHANGELOG/1.4-CHANGELOG.md
@@ -2,7 +2,39 @@
 
 ## Table of Contents
 
+- [v1.4.0-rc.2](#v140-rc2)
 - [v1.4.0-rc.1](#v140-rc1)
+
+## Changes Since v1.4.0-rc.1
+
+* Allow preprepared CoreDNS image to be used  by @aaronjwood in https://github.com/kubernetes-sigs/gateway-api/pull/3906
+* Update index.md field after moving BackendTLS struct by @kl52752 in https://github.com/kubernetes-sigs/gateway-api/pull/4041
+* Issue 3940: Move BackendTLSPolicy to standard by @candita in https://github.com/kubernetes-sigs/gateway-api/pull/4074
+* Add allowOrigins configuration to CORSAllowCredentialsBehavior and perform cleanup by @snorwin in https://github.com/kubernetes-sigs/gateway-api/pull/4094
+* fix: fix validation and wording when making gateway spec addresses value optional by @bjee19 in https://github.com/kubernetes-sigs/gateway-api/pull/4084
+* Fix broken link in TLS Configuration page by @4n86rakam1 in https://github.com/kubernetes-sigs/gateway-api/pull/4091
+* Automate GEP TOC generation and validate by @rikatz in https://github.com/kubernetes-sigs/gateway-api/pull/4075
+* conformance: fix per-test cleanup by @howardjohn in https://github.com/kubernetes-sigs/gateway-api/pull/4104
+* Added flag for running mesh conformance suite and automatically inferring supported features from Mesh.Status by @bexxmodd in https://github.com/kubernetes-sigs/gateway-api/pull/4097
+* Fixed couple of typos in conformance tests. by @bexxmodd in https://github.com/kubernetes-sigs/gateway-api/pull/4106
+* Issue 3940: Update BackendTLSPolicy GEP to move to standard by @candita in https://github.com/kubernetes-sigs/gateway-api/pull/4099
+* Removing experimental annotation from SupportedFeatures in GWC Status. by @bexxmodd in https://github.com/kubernetes-sigs/gateway-api/pull/4115
+* conformance: fix invalid BackendTLSPolicy conformance test by @howardjohn in https://github.com/kubernetes-sigs/gateway-api/pull/4105
+* fix: use inferred supported features to set extendedSupportedFeatures by @snorwin in https://github.com/kubernetes-sigs/gateway-api/pull/4113
+* conformance: make backend TLS tests IPv6-safe by @howardjohn in https://github.com/kubernetes-sigs/gateway-api/pull/4120
+* concepts/tooling.md: Add Headlamp tool by @illume in https://github.com/kubernetes-sigs/gateway-api/pull/4083
+* docs: update implements page by @zirain in https://github.com/kubernetes-sigs/gateway-api/pull/3996
+* Fix broken link in TLS Configuration page by @4n86rakam1 in https://github.com/kubernetes-sigs/gateway-api/pull/4091
+
+## New Contributors
+
+* @aaronjwood made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/3906
+* @illume made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/4083
+* @4n86rakam1 made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/4091
+
+## Full Changelog
+
+**Full Changelog**: https://github.com/kubernetes-sigs/gateway-api/compare/v1.4.0-rc.1...v1.4.0-rc2
 
 # v1.4.0-rc.1
 
@@ -219,5 +251,7 @@ and `HTTPRouteMatch`.
 * @sarthyparty made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/3962
 * @aaronjwood made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/3906
 * @illume made their first contribution in https://github.com/kubernetes-sigs/gateway-api/pull/4083
+
+## Full Changelog
 
 **Full Changelog**: https://github.com/kubernetes-sigs/gateway-api/compare/v1.3.0...v1.4.0-rc.1
